--- a/friends.css
+++ b/friends.css
@@ -13,6 +13,11 @@ header {
     justify-content: space-between;
 }
 
+h4 {
+    font-size: 12px;
+    font-weight: 300;
+    color: #7c7c7c;
+}
 header h1 {
     width: 60%;
     font-size: 24px;
@@ -28,7 +33,7 @@ header ion-icon {
     align-items: center;
     padding-bottom: 20px;
     border-bottom: 1px solid #cccccc;
-
+    margin-bottom: 20px;
 }
 .my-profile img {
     width: 48px;
@@ -42,7 +47,7 @@ header ion-icon {
 }
 
 .profile__name{
-    font-size:14px;
+    font-size:16px;
     margin-bottom: 5px;
 }
 
@@ -74,9 +79,73 @@ header ion-icon {
     justify-content: space-between;
     align-items: center;
     color: #7c7c7c;
+    margin: 10px 0;
 }
 
 .sub-header h4 {
     font-size: 12px;
     font-weight: 300;
+}
+
+.my-profile-multi {
+    padding-bottom: 20px;
+    border-bottom: 1px solid #cccccc;
+}
+
+.my-profile-multi img {
+    width: 40px;
+    height: 40px;
+    border-radius: 38%;
+}
+
+.my-profile-multi__profiles {
+    display: flex;
+    justify-content: flex-start;
+}
+.my-profile-multi__profile {
+    text-align: center;
+    margin-right: 15px;
+}
+
+.my-profile-multi__profile h4 {
+    margin-top: 5px;
+}
+
+.my-profile-multi__profile ion-icon {
+    width: 28px;
+    height: 28px;
+    border: 1px solid #7c7c7c;
+    border-radius: 38%;
+    padding: 5px;
+    color: #7c7c7c;
+}
+
+.profile__recommandation {
+    padding-bottom: 20px;
+    border-bottom: 1px solid #cccccc;
+}
+
+.profile__recommand img {
+    width: 40px;
+    height: 40px;
+    border-radius: 38%;
+}
+
+.profile__recommand {
+    font-size:16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.profile__recommand span{
+    width: 75%;
+}
+.profile__recommand__more {
+    display: flex;
+}
+
+.profile__recommand__more ion-icon {
+    font-size: 14px;
+    color:#7c7c7c;
+
 }
