--- a/style.css
+++ b/style.css
@@ -86,8 +86,10 @@ input::placeholder {
     align-items: center;
     justify-content: center;
     border-radius: 5px;
+    border: none;
     margin: 20px 0px;
 }
+
 .login--option {
     display: flex;
     justify-content: space-around;
