--- a/friends.css
+++ b/friends.css
@@ -19,6 +19,7 @@ h4 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 80px;
     padding-bottom: 20px;
     border-bottom: 1px solid #cccccc;
     margin-bottom: 20px;
