--- a/screen-header.css
+++ b/screen-header.css
@@ -1,9 +1,9 @@
 .screen-header {
-    position: fixed;
+    position: absolute;
     top:0;
-    width: 100%;
     box-sizing: border-box;
-    padding: 40px 10px 20px 10px;
+    width:100%;
+    padding: 40px 10px 0px 10px;
     background-color: #ffffff;
 
 }
@@ -15,7 +15,7 @@
 }
 
 .screen-header__title h1 {
-    width 20%;
+    width: 20%;
     font-size: 24px;
 }
 .screen-header__icons {
