link to friends

--- a/style.css
+++ b/style.css
@@ -107,3 +107,7 @@ input::placeholder {
     color:#7c7c7c;
     padding: 0 15px;
 }
+
+#login-form input:focus {
+    border-color:(0 0 0 rgba(163, 11, 11, 0.8));
+}
